objects/Product2.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Type__c</fullName>
        <label>Pricing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phased</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Products_To_Migrate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Products To Migrate</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>